<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/material_blue_grey_900">

        <TextView android:text="@string/my_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_large_material" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/button"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/button6"
            android:layout_gravity="center"
            android:layout_width="200dip"
            android:singleLine="false"
            android:background="@color/material_blue_grey_800"
            android:clickable="true"/>

        <Button
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/button2"
            android:layout_below="@+id/textView"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_width="200dip"
            android:background="@color/material_blue_grey_800"
            android:clickable="true"/>

        <Button
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/button3"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_width="200dip"
            android:background="@color/material_blue_grey_800"
            android:clickable="true" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/button4"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_width="200dip"
            android:layout_gravity="center"
            android:background="@color/material_blue_grey_800"
            android:clickable="true" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/button5"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button4"
            android:layout_alignLeft="@+id/button2"
            android:layout_width="200dip"
            android:layout_alignStart="@+id/button2"
            android:layout_gravity="center"
            android:background="@color/material_blue_grey_800"
            android:clickable="true" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/button6"
            android:layout_marginTop="10dp"
            android:layout_width="200dip"
            android:layout_below="@+id/button5"
            android:layout_alignRight="@+id/button4"
            android:layout_alignEnd="@+id/button4"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:background="@color/hint_foreground_material_light"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>
